--- a/templates/template.html
+++ b/templates/template.html
@@ -46,17 +46,17 @@ table tr:nth-child(odd) {
 </tr>
 <tr>
 <td>Snapshot created</td>
-<td>$if(verification.virt_snapshot)$yes$else$no$endif$</td>
-<td>$if(params.system_physical)$physical system$endif$</td>
+<td>$if(verification.virt_snapshot)$$verification.virt_snapshot$$endif$</td>
+<td>$if(params.system_physical)$$params.system_physical$$endif$</td>
 </tr>
 <tr>
 <td>Monitoring disabled</td>
-<td>$if(verification.mon_downtime)$yes$else$no$endif$</td>
+<td>$if(verification.mon_downtime)$$verification.mon_downtime$$endif$</td>
 <td>$if(params.environment)$$params.environment$ lifecycle$endif$</td>
 </tr>
 <tr>
 <td>System rebooted</td>
-<td>$if(verification.system_reboot)$yes$else$no$endif$</td>
+<td>$if(verification.system_reboot)$$verification.system_reboot$$endif$</td>
 <td></td>
 </tr>
 <tr>
@@ -66,7 +66,7 @@ table tr:nth-child(odd) {
 </tr>
 <tr>
 <td>Monitoring enabled</td>
-<td>$if(verification.mon_cleanup)$yes$else$no$endif$</td>
+<td>$if(verification.mon_cleanup)$$verification.mon_cleanup$$endif$</td>
 <td>$if(params.environment)$$params.environment$ lifecycle$endif$</td>
 </tr>
 </table>
