Pretty the templates for easier editing through humans

--- a/tests/fman_config.json.tmpl
+++ b/tests/fman_config.json.tmpl
@@ -1,1 +1,29 @@
-{"config": {"hostname": "foreman.giertz.loc", "api_user": "giertz", "api_pass": "shittypassword"}, "valid_objects": {"environment": {"name": "KT_giertz_Dev_CentOS_7_3", "id": 4}, "organization": {"name": "ShittyNation", "id": 1}, "host": {"name": "shittyserver.giertz.loc", "id": 12}, "location": {"name": "Darmstadt", "id": 4}, "hostgroup": {"name": "dev-hosts", "id": 3}}}
+{
+  "config": {
+    "hostname": "foreman.giertz.loc",
+    "api_user": "giertz",
+    "api_pass": "shittypassword"
+  },
+  "valid_objects": {
+    "environment": {
+      "name": "KT_giertz_Dev_CentOS_7_3",
+      "id": 4
+    },
+    "organization": {
+      "name": "ShittyNation",
+      "id": 1
+    },
+    "host": {
+      "name": "shittyserver.giertz.loc",
+      "id": 12
+    },
+    "location": {
+      "name": "Darmstadt",
+      "id": 4
+    },
+    "hostgroup": {
+      "name": "dev-hosts",
+      "id": 3
+    }
+  }
+}
