--- a/tests/libvirt_config.json.tmpl
+++ b/tests/libvirt_config.json.tmpl
@@ -1,1 +1,10 @@
-{"config": {"uri": "vpx://shittyvc03.giertz.loc/Giertz/Pinkepank/shittyesxi03.giertz.loc/?no_verify=1", "api_user": "svc-katello@pinkepank.local", "api_pass": "giertz"}, "valid_objects": {"vm": "shittyvm01"}}
+{
+  "config": {
+    "uri": "vpx://shittyvc03.giertz.loc/Giertz/Pinkepank/shittyesxi03.giertz.loc/?no_verify=1",
+    "api_user": "svc-katello@pinkepank.local",
+    "api_pass": "giertz"
+  },
+  "valid_objects": {
+    "vm": "shittyvm01"
+  }
+}
