--- a/tests/nagios_config.json.tmpl
+++ b/tests/nagios_config.json.tmpl
@@ -1,1 +1,20 @@
-{"main": {"hostname": "https://shittymon03.giertz.loc/icinga/icinga", "cgi_user": "omdadmin", "cgi_pass": "omd", "host": "dummy", "hostgroup": "dummy-hosts", "host_service": "PING", "host_services": 2}, "legacy": {"hostname": "https://shittymon04.stankowic.loc/nagios/nagios", "cgi_user": "omdadmin", "cgi_pass": "omd", "host": "dummy", "hostgroup": "dummy-hosts", "host_service": "PING", "host_services": 2}}
+{
+  "main": {
+    "hostname": "https://shittymon03.giertz.loc/icinga/icinga",
+    "cgi_user": "omdadmin",
+    "cgi_pass": "omd",
+    "host": "dummy",
+    "hostgroup": "dummy-hosts",
+    "host_service": "PING",
+    "host_services": 2
+  },
+  "legacy": {
+    "hostname": "https://shittymon04.stankowic.loc/nagios/nagios",
+    "cgi_user": "omdadmin",
+    "cgi_pass": "omd",
+    "host": "dummy",
+    "hostgroup": "dummy-hosts",
+    "host_service": "PING",
+    "host_services": 2
+  }
+}
