--- a/tests/pyvmomi_config.json.tmpl
+++ b/tests/pyvmomi_config.json.tmpl
@@ -1,1 +1,10 @@
-{"config": {"hostname": "shittyvc03.giertz.loc", "api_user": "svc-katello@pinkepank.local", "api_pass": "giertz"}, "valid_objects": {"vm": "shittyvm01"}}
+{
+  "config": {
+    "hostname": "shittyvc03.giertz.loc",
+    "api_user": "svc-katello@pinkepank.local",
+    "api_pass": "giertz"
+  },
+  "valid_objects": {
+    "vm": "shittyvm01"
+  }
+}
