--- a/tests/icinga2_config.json.tmpl
+++ b/tests/icinga2_config.json.tmpl
@@ -1,1 +1,13 @@
-{"config": {"hostname": "https://shittymon.giertz.loc:5665", "api_user": "giertz", "api_pass": "stdevel"}, "valid_objects": {"host": "shittyserver.giertz.loc", "hostgroup": "dev-hosts", "host_service": "DIAG: ping4", "host_services": 2}}
+{
+  "config": {
+    "hostname": "https://shittymon.giertz.loc:5665",
+    "api_user": "giertz",
+    "api_pass": "stdevel"
+  },
+  "valid_objects": {
+    "host": "shittyserver.giertz.loc",
+    "hostgroup": "dev-hosts",
+    "host_service": "DIAG: ping4",
+    "host_services": 2
+  }
+}
