--- a/tests/uyuni_config.json.tmpl
+++ b/tests/uyuni_config.json.tmpl
@@ -1,11 +1,19 @@
 {
     "config": {
         "hostname": "shittywalk03.giertz.loc",
-        "hostname_legacy": "shittywalk02.giertz.loc",
+        "port": 443,
         "api_user": "giertz",
         "api_pass": "stdevel"
     },
     "valid_objects": {
-        "host": {"name": "dummy", "id": 4}
+        "host": {
+            "name": "dummy",
+            "id": 4,
+            "group": "demo"
+        },
+        "hostparams": {
+            "katprep_mon_name": "dummy",
+            "katprep_mon_type": "icinga"
+        }
     }
 }
