add API call for getting user information

--- a/tests/uyuni_config.json.tmpl
+++ b/tests/uyuni_config.json.tmpl
@@ -6,6 +6,9 @@
         "api_pass": "stdevel"
     },
     "valid_objects": {
+        "user": {
+            "name": "admin"
+        },
         "host": {
             "name": "dummy",
             "id": 4,
