fix test configuration examples

--- a/tests/uyuni_config.json.tmpl
+++ b/tests/uyuni_config.json.tmpl
@@ -16,7 +16,8 @@
         },
         "hostparams": {
             "katprep_mon_name": "dummy",
-            "katprep_mon_type": "icinga"
+            "katprep_mon_type": "icinga",
+            "katprep_owner": "admin"
         }
     }
 }
