--- a/templates/template.html
+++ b/templates/template.html
@@ -31,9 +31,9 @@ table tr:nth-child(odd) {
 </tr>
 <tr>
 <td>$if(params.ip)$$params.ip$$endif$</td>
-<td>$if(params.date)$$params.date$$endif$</td>
-<td>$if(params.time)$$params.time$$endif$</td>
-<td>$if(params.owner)$$params.owner$$endif$</td>
+<td>$if(date)$$date$$endif$</td>
+<td>$if(time)$$time$$endif$</td>
+<td>$if(params.katprep_owner)$$params.katprep_owner$$endif$</td>
 </tr>
 </table>
 
@@ -46,7 +46,7 @@ table tr:nth-child(odd) {
 </tr>
 <tr>
 <td>Snapshot created</td>
-<td>$if(verification.virt_snapshot)$$verification.virt_snapshot$$endif$</td>
+<td>$if(verifications.virt_snapshot)$$verifications.virt_snapshot$$endif$</td>
 <td>$if(params.system_physical)$$params.system_physical$$endif$</td>
 </tr>
 <tr>
@@ -80,15 +80,15 @@ table tr:nth-child(odd) {
 <th>Description</th>
 <th>Reboot required?</th>
 </tr>
-$for(errata)$
+$for(patches)$
 <tr>
-<td>$if(errata.type)$$errata.type$$endif$</td>
-<td>$if(errata.errata_id)$$errata.errata_id$$endif$</td>
-<td>$if(errata.issued)$$errata.issued$$endif$</td>
-<td>$if(errata.description)$$errata.description$$endif$</td>
-<!-- <td>$if(errata.reboot_suggested)$yes$else$no$endif$</td> -->
+<td>$if(patches.type)$$patches.type$$endif$</td>
+<td>$if(patches.name)$$patches.name$$endif$</td>
+<td>$if(patches.issued_at)$$patches.issued_at$$endif$</td>
+<td>$if(patches.summary)$$patches.summary$$endif$</td>
+<!-- <td>$if(patches.reboot_suggested)$yes$else$no$endif$</td> -->
 <!-- Pandoc is not able to check strings/values, so we need to simply display the value -->
-<td>$errata.reboot_suggested$</td>
+<td>$patches.reboot_suggested$</td>
 </tr>
 $endfor$
 </table>
