add API calls and tests for custom variables

--- a/tests/uyuni_config.json.tmpl
+++ b/tests/uyuni_config.json.tmpl
@@ -18,6 +18,17 @@
             "katprep_mon_name": "dummy",
             "katprep_mon_type": "icinga",
             "katprep_owner": "admin"
+        },
+        "customvars": {
+            "katprep_mon": "URL of the monitoring system",
+            "katprep_mon_type": "Monitoring system type: nagios/icinga/icinga2",
+            "katprep_mon_name": "Object name within monitoring if not FQDN",
+            "katprep_virt": "Virtualization URL of the system",
+            "katprep_virt_type": "Virtualization host type: (libvirt)/pyvmomi",
+            "katprep_virt_name": "Object name within hypervisor if not FQDN",
+            "katprep_virt_snapshot": "Boolean whether system needs to be procted with a snapshot",
+            "katprep_pre-script": "Script to run before maintenance",
+            "katprep_post-script": "Script to run after maintenance"
         }
     }
 }
